Use backward compatible api